# mle-training

./: .gitignore  Dockerfile  MLproject  README.md  config.ini  env.yml  main.py  mletraining-0.1.12-py3-none-any.whl  myproject.py  pyproject.toml  setup.py
docs/: conf.py  index.rst  modules.rst
docs/_build/doctrees/: data_ingest.doctree  environment.pickle  index.doctree  model_scoring.doctree  model_training.doctree  modules.doctree
docs/_build/html/: .buildinfo  data_ingest.html  genindex.html  index.html  model_scoring.html  model_training.html  modules.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: data_ingest.rst.txt  model_scoring.rst.txt  model_training.rst.txt
docs/_build/html/_static/: documentation_options.js
mle_code_snippet/: README.md  nonstandardcode.py
mletraining.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: assignment_3_1_exercise_1_&_2.ipynb  ex 3 for chapter 6.ipynb  sample_ex3.ipynb
notebooks/.ipynb_checkpoints/: ex 3 for chapter 6-checkpoint.ipynb
notebooks/cache_folder/joblib/sklearn/pipeline/_fit_transform_one/03a2bc962f565b0968317cc6e1dabe3f/: metadata.json
src/data_ingest/: ingest_data.py
src/logs/: logger_01.py
src/mle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mletraining.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model_scoring/: score.py
src/model_training/: modeling.py  train.py
tests/unit_tests/: test_data_ingestion.py  test_model_score.py
(+11 files in other folders)
