[build-system]
requires = ["setuptools>=61.0", "scikit-learn", "pandas", "six", "pickle-mixin", "matplotlib"]
build-backend = "setuptools.build_meta"

[project]
name = "mletraining"
version = "0.1.12"
authors = [
  { name="Rushikesh Naik", email="rushikesh.naik@tigeranalytics.com" },
]
description = "This is basic package to get the basic functionality on housing data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
